--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "author": "sakaitakuya",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^0.3.2",
+    "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "nuxt-property-decorator": "^2.5.0"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.5.1",
     "@nuxtjs/vuetify": "^1.0.0"
   }
 }
