--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxt/typescript-runtime": "^0.3.2",
     "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
-    "nuxt-property-decorator": "^2.5.0"
+    "nuxt-property-decorator": "^2.5.0",
+    "vee-validate": "^3.2.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.1",
