ボード作成途中

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "@types/node",
     "@nuxt/types",
     "vuetify",
-    "@nuxtjs/axios"
+    "@nuxtjs/axios",
+    "@nuxtjs/moment"
   ]
 },
   "exclude": [
