--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.3.2",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/moment": "^1.4.0",
     "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.5.0",
     "vee-validate": "^3.2.0"
